[package]
name = "text-edit"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
app_units = "0.3"
clap = "2.20"
gleam = "0.2"
glutin = "0.7"
rusttype = "0.2.1"
serde_derive = "0.9.0-rc1"
serde_json = "0.8.6"
webrender = { path = "./webrender/webrender" }
webrender_traits = { path = "./webrender/webrender_traits", default_features = false }
xi-core = { path = "./xi-editor/rust" }
